# LinuxVideoConverter

./: .gitattributes  CMakeLists.txt  README.md  build_ffmpeg.sh  play.sh  transcode.cpp
include/: audio_filter.h  audiodecoder.h  audioencoder.h  av_queue.h  demuxer.h  frame.h  muxer.h  packet.h  resampler.h  ring_buffer.h  video_filter.h  videodecoder.h  videoencoder.h
src/: audio_filter.cpp  audiodecoder.cpp  audioencoder.cpp  av_queue.cpp  demuxer.cpp  frame.cpp  muxer.cpp  packet.cpp  resampler.cpp  ring_buffer.cpp  video_filter.cpp  videodecoder.cpp  videoencoder.cpp
